Refactoring in progress 7.